--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.4.8",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-query": "^3.39.3",
