eslint single quote

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,7 @@
     "next/core-web-vitals"
   ],
   "rules": {
-    "semi": [2, "always"]
+    "semi": [2, "always"],
+    "quotes": [2, "single"]
   }
 }
