eslint trailing comma

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
   ],
   "rules": {
     "semi": [2, "always"],
-    "quotes": [2, "single"]
+    "quotes": [2, "single"],
+    "comma-dangle": [2, "always-multiline"]
   }
 }
