--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,8 @@
     "quotes": [2, "single"],
     "comma-dangle": [2, "always-multiline"],
     "eol-last": "error",
-    "no-multiple-empty-lines": "error"
+    "no-multiple-empty-lines": "error",
+    "react/display-name": "off",
+    "arrow-spacing": "error"
   }
 }
