--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,12 @@
 {
-  "extends": [
-    "next/core-web-vitals"
-  ],
+  "extends": ["next/core-web-vitals", "plugin:prettier/recommended"],
   "rules": {
-    "semi": [2, "always"],
-    "quotes": [2, "single"],
-    "comma-dangle": [2, "always-multiline"],
-    "eol-last": "error",
-    "no-multiple-empty-lines": "error",
-    "react/display-name": "off",
-    "arrow-spacing": "error"
+    // "semi": [2, "always"],
+    // "quotes": [2, "single"],
+    // "comma-dangle": [2, "always-multiline"],
+    // "eol-last": "error",
+    // "no-multiple-empty-lines": "error",
+    // "react/display-name": "off",
+    // "arrow-spacing": "error"
   }
 }
