--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "PORT=8080 next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier . --write"
   },
   "dependencies": {
     "@types/node": "20.3.3",
@@ -26,5 +27,11 @@
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
     "zustand": "^4.3.9"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^3.2.4"
   }
 }
