--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,11 @@
       },
     ],
     "paths": {
-      "@/*": ["./src/*"],
+      "@/components/*": ["components/*"],
+      "@/hooks/*": ["hooks/*"],
+      "@/services/*": ["services/*"],
+      "@/stores/*": ["stores/*"],
+      "@/utils/*": ["utils/*"],
     },
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
