adjust tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,11 +20,7 @@
       },
     ],
     "paths": {
-      "@/components/*": ["components/*"],
-      "@/hooks/*": ["hooks/*"],
-      "@/services/*": ["services/*"],
-      "@/stores/*": ["stores/*"],
-      "@/utils/*": ["utils/*"],
+      "@/*": ["./src/*"]
     },
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
