--- a/package.json
+++ b/package.json
@@ -7,7 +7,22 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier . --write"
+    "format": "prettier . --write",
+    "postinstall": "husky install"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && git add ."
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "yarn lint",
+      "yarn format"
+    ],
+    "*.css": [
+      "yarn format"
+    ]
   },
   "dependencies": {
     "@types/node": "20.3.3",
@@ -23,6 +38,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-query": "^3.39.3",
     "tailwindcss": "3.3.2",
@@ -35,6 +51,8 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^9.0.6",
+    "lint-staged": "^15.2.0",
     "prettier": "^3.2.4"
   }
 }
