--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier . --write",
-    "postinstall": "husky install"
+    "prepare": "husky install"
   },
   "husky": {
     "hooks": {
@@ -16,7 +16,7 @@
     }
   },
   "lint-staged": {
-    "*.{ts,tsx}": [
+    "*.{vue,ts,tsx}": [
       "yarn lint",
       "yarn format"
     ],
@@ -51,8 +51,8 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^9.0.6",
-    "lint-staged": "^15.2.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
     "prettier": "^3.2.4"
   }
 }
