--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
   "plugins": ["@typescript-eslint", "react"],
   "rules": {
     "react/display-name": "off",
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off",
+    "tailwindcss/enforces-shorthand": "off"
   }
 }
