--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cookies-next": "^4.1.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
+    "lottie-react": "^2.4.0",
     "next": "13.4.8",
     "postcss": "8.4.24",
     "react": "18.2.0",
