--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "autoprefixer": "10.4.14",
     "clsx": "^1.2.1",
     "cookies-next": "^4.1.0",
+    "embla-carousel-react": "^8.0.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
+    "keen-slider": "^6.8.6",
     "lottie-react": "^2.4.0",
     "next": "13.4.8",
     "postcss": "8.4.24",
