--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,12 +3,15 @@
     "next/core-web-vitals",
     "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended",
-    "plugin:tailwindcss/recommended"
+    "plugin:tailwindcss/recommended",
+    "plugin:react-hooks/recommended"
   ],
   "plugins": ["@typescript-eslint", "react"],
   "rules": {
     "react/display-name": "off",
     "@typescript-eslint/no-explicit-any": "off",
-    "tailwindcss/enforces-shorthand": "off"
+    "tailwindcss/enforces-shorthand": "off",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   }
 }
