--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-query": "^3.39.3",
+    "sharp": "^0.33.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
     "zustand": "^4.3.9"
